--- a/build.gradle
+++ b/build.gradle
@@ -27,5 +27,7 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.springframework.boot:spring-boot-starter-web"
+    compile 'org.springframework.kafka:spring-kafka'
+    compile 'org.json:json:20180813'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
